RESOLVED FIXED33506
Fix handling of unusual kana sequences in search
https://bugs.webkit.org/show_bug.cgi?id=33506
Summary Fix handling of unusual kana sequences in search
Darin Adler
Reported 2010-01-11 17:27:03 PST
Fix handling of unusual kana sequences in search
Attachments
Patch (21.14 KB, patch)
2010-01-11 17:29 PST, Darin Adler
mitz: review+
Darin Adler
Comment 1 2010-01-11 17:29:41 PST
Eric Seidel (no email)
Comment 2 2010-01-11 20:44:32 PST
Eric Seidel (no email)
Comment 3 2010-01-11 20:45:21 PST
Similar trouble with Leopard (and likely tiger): http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r53114%20(9142)/fast/text/find-kana-pretty-diff.html I expect you're already aware of these.
Note You need to log in before you can comment on or make changes to this bug.