Fix handling of unusual kana sequences in search https://bugs.webkit.org/show_bug.cgi?id=33506

Reviewed by Dan Bernstein.

WebCore:

* editing/TextIterator.cpp:
(WebCore::composedVoicedSoundMark): Removed unnnecessary case for a
non-kana-letter character. This function only works for kana letters.
(WebCore::SearchBuffer::isBadMatch): Fixed voiced sound mark code to
properly handle cases where one character has a shorter list of
combining voiced sound marks than the other.

LayoutTests:

* fast/text/find-kana-expected.txt: Updated.
* fast/text/script-tests/find-kana.js: Added new tests for sequences
that do not have composed equivalents. This is needed to test the code
that compares voice marks. The old test cases didn't cover the combining
character code path because normalizing to NFC combined all the sequences.
* platform/mac-leopard/fast/text/find-kana-expected.txt: Updated.
* platform/qt/fast/text/find-kana-expected.txt: Updated.



Canonical link: https://commits.webkit.org/44522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53114 268f45cc-cd09-0410-ab3c-d52691b4dbfc